--- a/Validation/power_mdes_sample__i1_2_constant_block.Rmd
+++ b/Validation/power_mdes_sample__i1_2_constant_block.Rmd
@@ -43,8 +43,8 @@ library(pander)    # For good table format
 
 ```{r scriptFiles, warnings = FALSE, message = FALSE}
 source(here::here("Validation/Simulations", "adjust.WY.R")) # MTP Westfall-Young
-source(here::here("Validation/Simulations", "gen_data_dist_2_levels.R")) # data generating functions for 2 level block and cluster
-source(here::here("Validation/Simulations", "power_mcs_2_levels.R")) # Estimate power for each of the designs by running data generating function S sample times and fitting models to estimate power.
+source(here::here("Validation/Simulations", "gen_blocked_i1_2.R")) # data generating functions for 2 level block and cluster
+source(here::here("Validation/Simulations", "EstimatePowerWithSimulation.R")) # Estimate power for each of the designs by running data generating function S sample times and fitting models to estimate power.
 source(here::here("Validation/Simulations", "validate_power_mdes_sample_blocked_i1_2c.R")) # Wrapping and creating 
 source(here::here("Validation/Simulations", "misc.R")) # For coloring texts and other purposes
 ```
