--- a/Validation/power_mdes_sample__i1_2_constant_block.Rmd
+++ b/Validation/power_mdes_sample__i1_2_constant_block.Rmd
@@ -346,8 +346,7 @@ mdes_0125_holms_indiv <- mdes_0125_holms_indiv[, c(1,2,4,3,5)]
 ```{r mdesCombined01, message = FALSE}
 # make names consistent
 names(mdes_0125_bonf_indiv) = names(mdes_0125_bh_indiv) = names(mdes_0125_holms_indiv) = 
-  c()
-
+  c("MTP", "Adjusted MDES", "Targetted MDES", "Method Estimated indiv power", "Targetted indiv power")
 mdes_0125_indiv_combined <- rbind(mdes_0125_bonf_indiv, mdes_0125_bh_indiv)
 mdes_0125_indiv_combined <- rbind(mdes_0125_indiv_combined, mdes_0125_holms_indiv)
 pander::pandoc.table(mdes_0125_indiv_combined, style = "grid", split.tables = 90)
